# bidi-coherence-delta-calculus

./: BIDI_CALCULUS_CORE.md  BIDI_COHERENCE_DELTA_CALCULUS.md  BRIDGE_RUNTIME.md  CDC_LANGUAGE.md  CITATION.cff  FORMAL_SEMANTIC_SPINE.md  NATIVE_SELF_HOSTING_MANDATE.md  README.md  VERIFICATION_OBLIGATION_MATRIX.md  bridge_codebooks.cdc  bridge_jobs.cdc  kernel.cdc  laws.cdc  lean-toolchain  native_reducer.cdc  pyproject.toml  system.cdc  trace_windows.cdc
.github/workflows/: ci.yml
assets/icon-concepts/: README.md
demo/: index.html
formal/coq/: CDCFinite.v
formal/lean/: CDCFinite.lean
paper/arxiv/: main.tex
runtime/: cdc_bridge_runtime.c  cdc_native_runtime.c
scripts/: verify.sh
