[project]
name = "bidi-coherence-delta-calculus"
version = "0.2.2"
description = "Native .cdc language sources, a minimal Python bootloader, an operational C bridge runtime, native witness declarations, and paper source for BiDi Coherence-Delta Calculus."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Edward Ellis" }]
keywords = [
  "hybrid-systems",
  "formal-methods",
  "dynamical-systems",
  "programming-languages",
  "active-inference",
  "mixed-reality",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Interpreters",
]

[project.urls]
Homepage = "https://github.com/ETEllis/bidi-coherence-delta-calculus"
Repository = "https://github.com/ETEllis/bidi-coherence-delta-calculus"

[tool.setuptools]
py-modules = ["cdc_boot"]
